zmiana czcionki oraz drobne poprawki w kodzie

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -68,7 +68,7 @@
         android:layout_height="60dp"
         android:background="@drawable/rounded_background"
         android:ems="10"
-        android:fontFamily="@font/luckiestguy"
+        android:fontFamily="@font/freeman"
         android:hint="HASŁO:"
         android:inputType="textPassword"
         android:paddingStart="25dp"
@@ -88,10 +88,11 @@
         android:layout_width="370dp"
         android:layout_height="60dp"
         android:background="@drawable/rounded_background"
-        android:fontFamily="@font/luckiestguy"
+        android:fontFamily="@font/freeman"
         android:hint="LOGIN:"
         android:includeFontPadding="true"
         android:paddingStart="25dp"
+        android:textAlignment="viewStart"
         android:textColor="#FFFFFF"
         android:textColorHint="#FAFAFA"
         android:textSize="20sp"
