--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -33,8 +33,8 @@
         android:layout_width="340dp"
         android:layout_height="41dp"
         android:background="@drawable/rounded_background"
-        android:fontFamily="@font/luckiestguy"
-        android:hint="IMIĘ :"
+        android:fontFamily="@font/freeman"
+        android:hint="IMIĘ:"
         android:includeFontPadding="true"
         android:paddingStart="25dp"
         android:textColor="#000000"
@@ -54,7 +54,7 @@
         android:layout_width="340dp"
         android:layout_height="41dp"
         android:background="@drawable/rounded_background"
-        android:fontFamily="@font/luckiestguy"
+        android:fontFamily="@font/freeman"
         android:hint="LOGIN:"
         android:includeFontPadding="true"
         android:paddingStart="25dp"
@@ -74,8 +74,8 @@
         android:layout_width="340dp"
         android:layout_height="41dp"
         android:background="@drawable/rounded_background"
-        android:fontFamily="@font/luckiestguy"
-        android:hint="E-MAIL :"
+        android:fontFamily="@font/freeman"
+        android:hint="E-MAIL:"
         android:includeFontPadding="true"
         android:paddingStart="25dp"
         android:textColor="#000000"
@@ -94,8 +94,8 @@
         android:layout_width="340dp"
         android:layout_height="41dp"
         android:background="@drawable/rounded_background"
-        android:fontFamily="@font/luckiestguy"
-        android:hint="NAZWISKO :"
+        android:fontFamily="@font/freeman"
+        android:hint="NAZWISKO:"
         android:includeFontPadding="true"
         android:paddingStart="25dp"
         android:textColor="#000000"
@@ -174,9 +174,10 @@
         android:layout_width="340dp"
         android:layout_height="41dp"
         android:background="@drawable/rounded_background"
-        android:fontFamily="@font/luckiestguy"
-        android:hint="HASŁO :"
+        android:fontFamily="@font/freeman"
+        android:hint="HASŁO:"
         android:includeFontPadding="true"
+        android:inputType="textPassword"
         android:paddingStart="25dp"
         android:textColor="#000000"
         android:textColorHint="#FAFAFA"
@@ -187,7 +188,6 @@
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.74"
-        android:inputType="textPassword"/>
+        app:layout_constraintVertical_bias="0.74" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
