--- a/app/src/main/res/layout/activity_sentences.xml
+++ b/app/src/main/res/layout/activity_sentences.xml
@@ -33,7 +33,7 @@
         android:layout_width="340dp"
         android:layout_height="80dp"
         android:background="@drawable/rounded_square"
-        android:fontFamily="@font/luckiestguy"
+        android:fontFamily="@font/freeman"
         android:paddingTop="30dp"
         android:text="PRZYKŁADOWE ZDANIE ..."
         android:textAlignment="center"
@@ -135,7 +135,7 @@
         android:layout_width="160dp"
         android:layout_height="80dp"
         android:background="@drawable/rounded_square"
-        android:fontFamily="@font/luckiestguy"
+        android:fontFamily="@font/freeman"
         android:text="OPCJA II"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
@@ -151,7 +151,7 @@
         android:layout_width="160dp"
         android:layout_height="80dp"
         android:background="@drawable/rounded_square"
-        android:fontFamily="@font/luckiestguy"
+        android:fontFamily="@font/freeman"
         android:text="OPCJA I"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
@@ -167,7 +167,7 @@
         android:layout_width="160dp"
         android:layout_height="80dp"
         android:background="@drawable/rounded_square"
-        android:fontFamily="@font/luckiestguy"
+        android:fontFamily="@font/freeman"
         android:text="OPCJA III"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
@@ -183,7 +183,7 @@
         android:layout_width="160dp"
         android:layout_height="80dp"
         android:background="@drawable/rounded_square"
-        android:fontFamily="@font/luckiestguy"
+        android:fontFamily="@font/freeman"
         android:text="OPCJA IV"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
