--- a/app/src/main/res/layout/activity_vocabulary_learning.xml
+++ b/app/src/main/res/layout/activity_vocabulary_learning.xml
@@ -51,7 +51,7 @@
         android:layout_width="346dp"
         android:layout_height="70dp"
         android:background="@drawable/rounded_square"
-        android:fontFamily="@font/luckiestguy"
+        android:fontFamily="@font/freeman"
         android:hint="WPISZ TŁUMACZENIE SŁOWA "
         android:includeFontPadding="true"
         android:paddingStart="10dp"
@@ -170,7 +170,7 @@
         android:layout_width="340dp"
         android:layout_height="41dp"
         android:background="@drawable/rounded_background"
-        android:fontFamily="@font/luckiestguy"
+        android:fontFamily="@font/freeman"
         android:paddingStart="10dp"
         android:paddingTop="8dp"
         android:text="LOSOWE SŁOWO"
