--- a/app/src/main/res/layout/word_item.xml
+++ b/app/src/main/res/layout/word_item.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:background="@drawable/rounded_item_left"
+        android:fontFamily="@font/freeman"
         android:gravity="center_vertical"
         android:padding="10dp"
         android:textAlignment="center"
@@ -27,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:background="@drawable/rounded_item_right"
+        android:fontFamily="@font/freeman"
         android:gravity="center_vertical"
         android:padding="10dp"
         android:textAlignment="center"
