--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -54,6 +54,7 @@
                 android:layout_width="256dp"
                 android:layout_height="58dp"
                 android:fontFamily="@font/luckiestguy"
+                android:paddingStart="70dp"
                 android:paddingTop="10dp"
                 android:shadowColor="#56DB05"
                 android:shadowDx="5"
@@ -63,16 +64,17 @@
                 android:textAlignment="center"
                 android:textAllCaps="true"
                 android:textColor="#FFFFFF"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/loginVIew"
                 android:layout_width="186dp"
                 android:layout_height="match_parent"
-                android:fontFamily="@font/luckiestguy"
+                android:fontFamily="@font/freeman"
                 android:gravity="center"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textSize="20sp" />
         </TableRow>
 
         <TableRow
@@ -84,6 +86,7 @@
                 android:layout_width="213dp"
                 android:layout_height="58dp"
                 android:fontFamily="@font/luckiestguy"
+                android:paddingStart="70dp"
                 android:paddingTop="10dp"
                 android:shadowColor="#56DB05"
                 android:shadowDx="5"
@@ -93,16 +96,17 @@
                 android:textAlignment="center"
                 android:textAllCaps="true"
                 android:textColor="#FFFFFF"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/imieView"
                 android:layout_width="186dp"
                 android:layout_height="match_parent"
-                android:fontFamily="@font/luckiestguy"
+                android:fontFamily="@font/freeman"
                 android:gravity="center"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textSize="20sp" />
 
         </TableRow>
 
@@ -115,6 +119,7 @@
                 android:layout_width="256dp"
                 android:layout_height="58dp"
                 android:fontFamily="@font/luckiestguy"
+                android:paddingStart="70dp"
                 android:paddingTop="10dp"
                 android:shadowColor="#56DB05"
                 android:shadowDx="5"
@@ -124,15 +129,16 @@
                 android:textAlignment="center"
                 android:textAllCaps="true"
                 android:textColor="#FFFFFF"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/emailView"
                 android:layout_width="186dp"
                 android:layout_height="match_parent"
-                android:fontFamily="@font/luckiestguy"
-                android:gravity="center" />
+                android:fontFamily="@font/freeman"
+                android:gravity="center"
+                android:textSize="20sp" />
 
         </TableRow>
 
