--- a/app/src/main/res/layout/activity_translator.xml
+++ b/app/src/main/res/layout/activity_translator.xml
@@ -66,7 +66,7 @@
         android:layout_width="270dp"
         android:layout_height="100dp"
         android:background="@drawable/rounded_square"
-        android:fontFamily="@font/luckiestguy"
+        android:fontFamily="@font/freeman"
         android:includeFontPadding="true"
         android:paddingStart="10dp"
         android:textAlignment="center"
@@ -86,7 +86,7 @@
         android:layout_width="270dp"
         android:layout_height="100dp"
         android:background="@drawable/rounded_square"
-        android:fontFamily="@font/luckiestguy"
+        android:fontFamily="@font/freeman"
         android:includeFontPadding="true"
         android:paddingStart="10dp"
         android:textAlignment="center"
