--- a/app/src/main/res/layout/activity_vocabulary_learning.xml
+++ b/app/src/main/res/layout/activity_vocabulary_learning.xml
@@ -8,6 +8,21 @@
     android:paddingStart="10dp"
     tools:context=".LoginActivity">
 
+    <ImageView
+        android:id="@+id/imageView9"
+        android:layout_width="383dp"
+        android:layout_height="141dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="15dp"
+        android:radius="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.027"
+        app:srcCompat="@drawable/backimg" />
+
     <Button
         android:id="@+id/accept"
         android:layout_width="340dp"
@@ -107,26 +122,7 @@
         app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.243" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="339dp"
-        android:layout_height="120dp"
-        android:autoText="false"
-        android:background="@drawable/rounded_logo"
-        android:fontFamily="@font/inter_bold"
-        android:gravity="center"
-        android:text="LangMaster"
-        android:textAlignment="center"
-        android:textColor="#A4EB79"
-        android:textSize="40sp"
-        android:textStyle="bold|italic"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.026" />
+        app:layout_constraintVertical_bias="0.262" />
 
     <Spinner
         android:id="@+id/spinner2"
