--- a/app/src/main/res/layout/activity_vocabulary_learning.xml
+++ b/app/src/main/res/layout/activity_vocabulary_learning.xml
@@ -188,10 +188,15 @@
         android:id="@+id/is_correct"
         android:layout_width="367dp"
         android:layout_height="64dp"
+        android:background="@drawable/rounded_square"
+        android:fontFamily="@font/freeman"
+        android:gravity="center"
         android:text="TextView"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.636"
+        app:layout_constraintHorizontal_bias="0.568"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.71" />
